[gd_scene load_steps=4 format=3 uid="uid://srd8wx7yqy38"]

[ext_resource type="Script" uid="uid://erbdir7vskbw" path="res://scenes/interactables/mask_altar.gd" id="1_01b1o"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ype0b"]
size = Vector2(80, 50)

[sub_resource type="CircleShape2D" id="CircleShape2D_csphg"]
radius = 170.003

[node name="MaskAltar" type="Node2D"]
script = ExtResource("1_01b1o")

[node name="AltarImage" type="ColorRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -25.0
offset_right = 40.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.176419, 0.176419, 0.176419, 1)

[node name="FireMaskImage" type="ColorRect" parent="AltarImage"]
visible = false
layout_mode = 0
offset_right = 32.0
offset_bottom = 32.0
color = Color(1, 0, 0, 1)

[node name="AirMaskImage" type="ColorRect" parent="AltarImage"]
visible = false
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -16.0
offset_right = 16.0
offset_bottom = 32.0
grow_horizontal = 2
color = Color(0, 1, 1, 1)

[node name="ForrestMaskImage" type="ColorRect" parent="AltarImage"]
visible = false
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -32.0
offset_bottom = 32.0
grow_horizontal = 0
color = Color(0, 0.435294, 0, 1)

[node name="InteractionArea" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionArea"]
shape = SubResource("RectangleShape2D_ype0b")

[node name="ProximityArea" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="ProximityArea"]
shape = SubResource("CircleShape2D_csphg")

[node name="Label" type="Label" parent="."]
visible = false
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_top = -100.0
offset_right = 20.0
offset_bottom = -55.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 32
text = "Q"
